k8s/stage/api-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: turn-api
  ports:
    - name: http
      port: 8080
      targetPort: http
