k8s/stage/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turn-api
spec:
  type: NodePort
  selector:
    app: turn-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30082
