k8s/stage/clamav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clamav
spec:
  type: ClusterIP
  selector:
    app: clamav
  ports:
    - name: clamd
      port: 3310
      targetPort: clamd
