k8s/stage/epoint-sandbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: epoint-sandbox
spec:
  selector:
    app: epoint-sandbox
  ports:
    - name: http
      port: 8181
      targetPort: http
