k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turn-stage
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: turn-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turn-ui
                port:
                  number: 8080
