k8s/stage/clamav-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clamav-ingress
spec:
  podSelector:
    matchLabels:
      app: clamav
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: turn-api
      ports:
        - protocol: TCP
          port: 3310
